--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,35 @@
-blinker==1.8.2
+alembic==1.13.1
+blinker==1.6.2
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
-Flask==3.0.3
-itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-Werkzeug==3.0.4
+cryptography==41.0.1
+Deprecated==1.2.14
+Flask==3.0.0
+Flask-Login==0.6.3
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+flask-statistics==1.0.2
+Flask-WTF==1.2.1
+greenlet==3.0.3
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.3.0
+MarkupSafe==2.1.3
+pycparser==2.21
+PyGithub==2.1.1
+PyJWT==2.8.0
+PyMySQL==1.1.0
+PyNaCl==1.5.0
+python-dateutil==2.8.2
+python-editor==1.0.4
+requests==2.31.0
+six==1.16.0
+SQLAlchemy==2.0.25
+typing_extensions==4.6.3
+urllib3==2.1.0
+Werkzeug==3.0.1
+wrapt==1.16.0
+WTForms==3.1.2
