--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,32 @@
-alembic==1.13.1
-blinker==1.6.2
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-cryptography==41.0.1
-Deprecated==1.2.14
-Flask==3.0.0
+alembic==1.14.0
+blinker==1.9.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.8
+cryptography==44.0.0
+Deprecated==1.2.15
+Flask==3.1.0
 Flask-Login==0.6.3
-Flask-Migrate==4.0.5
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
-flask-statistics==1.0.2
-Flask-WTF==1.2.1
-greenlet==3.0.3
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.2
-Mako==1.3.0
-MarkupSafe==2.1.3
-pycparser==2.21
-PyGithub==2.1.1
-PyJWT==2.8.0
-PyMySQL==1.1.0
+flask-statgraph==1.0.3
+Flask-WTF==1.2.2
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+Mako==1.3.8
+MarkupSafe==3.0.2
+nh3==0.2.20
+pycparser==2.22
+PyGithub==2.5.0
+PyJWT==2.10.1
+PyMySQL==1.1.1
 PyNaCl==1.5.0
-python-dateutil==2.8.2
-python-editor==1.0.4
-requests==2.31.0
-six==1.16.0
-SQLAlchemy==2.0.25
-typing_extensions==4.6.3
-urllib3==2.1.0
-Werkzeug==3.0.1
-wrapt==1.16.0
-WTForms==3.1.2
+requests==2.32.3
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.1.3
+wrapt==1.17.0
+WTForms==3.2.1
